chore: Set up ESLint for linting and performed code cleanup
